jvm flags added